--- a/src/main/resources/templates/new-course-event.html
+++ b/src/main/resources/templates/new-course-event.html
@@ -38,7 +38,7 @@
 
 </head>
 <body style="background-color:#ecf0f1">
-<div align="center" style="background-color:#ecf0f1;">
+<div align="center" style="background-color:#ecf0f1; padding: 20px">
 
     <!-- Début en-tête -->
 
@@ -102,7 +102,7 @@
                                     <td width="100%" class="resp-full-td" valign="top" style="padding: 10px 0 0">
                                         <span style="font-size:16px; font-family:'Helvetica Neue', helvetica, arial, sans-serif; color:#f4f4f4">Bonjour
                                              <span style="text-transform: capitalize"
-                                                   th:text="${firstName}">${firstName}</span>&nbsp;
+                                                   th:text="${firstName}">${firstName}</span>
                                             <span style="text-transform: uppercase"
                                                   th:text="${lastName}">${lastName}</span>,
                                         </span>
@@ -111,7 +111,7 @@
 
                                 <tr>
                                     <td width="100%" class="resp-full-td" valign="top"
-                                        style="line-height: 1.8;text-align : justify; padding: 20px 0; font-size:16px; font-family:'Helvetica Neue', helvetica, arial, sans-serif; color: #f4f4f4">
+                                        style="line-height: 1.8; padding: 20px 0; font-size:16px; font-family:'Helvetica Neue', helvetica, arial, sans-serif; color: #f4f4f4">
                                         Encore merci pour votre inscription à notre cours
                                         <span style="font-weight: bold !important;font-family:Helvetica Neue,Helvetica,Helvetica,Arial,sans-serif;color:#17a2b8;margin:0;padding:0"
                                               th:text="${name}">
@@ -126,7 +126,7 @@
                                 <tr>
                                     <td width="100%" class="resp-full-td" valign="top"
                                         style="line-height: 1.8; font-size:16px; font-family:'Helvetica Neue', helvetica, arial, sans-serif; color: #f4f4f4">
-                                        Pour ce cours nous avons reçu de nombreuses demandes votre session aura lieu
+                                        Pour ce cours nous avons reçu de nombreuses inscriptions; votre session aura lieu
                                         <span th:text="${startDate}"></span>&nbsp;
                                         <br/>
                                         Vous allez recevoir sous peu un lien pour partiper à la formation.
